--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
-  <title>Frontend Mentor | Clipboard landing page</title>
+  <title> UI  CHALLENGE</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
 
